# plasma_math_tools

./: .gitignore  README.md  build.sh  conda_build_config.yaml  meta.yaml  pyproject.toml  recipe.yaml  setup.cfg
plasma_math_tools/: data_fitting.py
plasma_math_tools/PlasmaMathTools.egg-info/: PKG-INFO  SOURCES.txt
regression/: test_geometry_utils.py
src/plasma_math_tools/: .gitignore  __init__.py  geometry_utils.py
