[metadata]
name = plasma_math_tools
version = 1.0.12
author = Severin S. Denk
author_email = arewedreamingcode@gmail.com
description = Collection of math tools useful for plasma physics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AreWeDreaming/plasma_math_tools
project_urls =
    Bug Tracker = https://github.com/AreWeDreaming/plasma_math_tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix

[options]
packages = find:
package_dir =
    = src
include_package_data = True

[options.packages.find]
where = src